
Following types of entries are listed:

[!] Important change
[+] New functionality
[*] Changes in existing functionality
[-] Fixed error

Each entry might list referenced bug or people who helped with fixing
the issue.

ChangeLog
=========
    
2009???? - 1.26.91

[-] * Fixed parsing of vCards with lowercase types (bug #1006).
[-] * Handle forward references in Nokia phonebook (bug #1009).
    
20091012 - 1.26.90

[-] * Fixed parsing of SMS with empty recipient (bug #998).
[-] * Correct setting of time on Huawei phones.
[+] * Addnew command can now change memory type being used.
[-] * Proper handling of locations and memory type in vCards.
[-] * Added IDs for several recent Sony-Ericsson phones.
[-] * Fix decoding of phone numbers in some cases (bug #999).
[-] * Replace MD5 implementation with public domain one (bug #964).
[-] * Huawei E17X has broken UCS-2, do not use it (bug #962).
[-] * Do not fail if phone does not support extended SMS params (bug #927).
[+] * Added support for Samsung calendar (bug #839).
[-] * Do not choke on OK in message text.
[-] * Add ID of Nokia 6020b (bug #1004).
[-] * Fix decoding of SMS with extended characters.
[-] * Fixed handling of DCT4 specific functions.
[-] * Add workaround for especially broken Ubinetics GDC201.
    
20090908 - 1.26.1

[-] * CPIN reply is handled like regular one except in A2D case (bug #994).
[-] * Fix finding first empty position when memory is empty (bug #996).
[-] * Fixed parsing of SMS status reports.
[-] * Fixed parsing of text messages with new lines (bug #995).
    
20090904 - 1.26.0

[-] * Fixed handling of RunOnReceive error code.
[-] * Fixed crash when encoding USSD dials.
[-] * Fixed decoding of phonebook entries on Motorola (bug #988).
[-] * Fixed decoding of long text messages (bug #990).
[-] * Fixed location of saved message (bug #989).
[-] * Added ID for Nokia 1681c.

20090827 - 1.25.93

[-] * Fixed reading of phonebook from Samsung (bug #980).
[-] * Add ID for Nokia 3390b (bug #982).